<resources>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="config_systemBarComponent">com.android.systemui.statusbar.tablet.TabletStatusBar</string>
    <string name="system_ui_date_pattern">@*android:string/system_ui_date_pattern</string>
    <string name="status_bar_date_formatter">"%1$s
%2$s"</string>
    <string name="carrier_invalid_sim_card">Invalid SIM card</string>
    <string name="power_settings_instructions">Enabling Extended Standby Mode in Power management will optimize battery lifetime</string>
    <string name="battery_low_power_settings">Battery info</string>
    <string name="toast_message_not_allow_turn_on_hotspot">Wi-Fi hotspot not available in airplane mode</string>
    <string name="usb_connected_txt">USB connected</string>
    <string name="to_charge_use_charger_txt">To charge your device, use your Sony™ charger</string>
    <string name="status_bar_toolsbar_settings_title">Select quick settings</string>
    <string name="status_bar_recent_failed_to_launch_app">The application could not be started</string>
    <string name="toast_message_maximum_number_of_tools_reached">Maximum number of quick settings have been selected</string>
    <string name="status_bar_settings_airplanemode">Airplane mode</string>
    <string name="status_bar_settings_autorotate">Auto rotate screen</string>
    <string name="status_bar_settings_gps">GPS</string>
    <string name="status_bar_settings_settings">Shortcut to Settings</string>
    <string name="status_bar_settings_wifi">Wi-Fi</string>
    <string name="status_bar_settings_bluetooth">Bluetooth</string>
    <string name="status_bar_settings_mobile_data">Mobile data traffic</string>
    <string name="status_bar_settings_brightness">Brightness</string>
    <string name="status_bar_settings_sound">Sound</string>
    <string name="status_bar_settings_wifi_hotspot">Wi-Fi hotspot</string>
    <string name="status_bar_settings_nfc">NFC</string>
    <string name="status_bar_settings_roaming">Roaming</string>
    <string name="status_bar_settings_autosync">Auto-sync data</string>
    <string name="status_bar_settings_throw">Throw</string>
    <string name="status_bar_settings_stamina">‏STAMINA</string>
    <string name="status_bar_airplanemode">Airplane</string>
    <string name="status_bar_autorotate">Auto rotate</string>
    <string name="status_bar_gps">GPS</string>
    <string name="status_bar_settings">Settings</string>
    <string name="status_bar_wifi">Wi-Fi</string>
    <string name="status_bar_bluetooth">Bluetooth</string>
    <string name="status_bar_mobile_data">Mobile data</string>
    <string name="status_bar_brightness">Brightness</string>
    <string name="status_bar_sound">Sound</string>
    <string name="status_bar_wifi_hotspot">Hotspot</string>
    <string name="status_bar_nfc">NFC</string>
    <string name="status_bar_roaming">Roaming</string>
    <string name="status_bar_autosync">Auto-sync</string>
    <string name="status_bar_throw">Throw</string>
    <string name="status_bar_stamina">STAMINA</string>
    <string name="accessibility_tool_state" formatted="false">%s %s</string>
    <string name="accessibility_state_vibrate">vibrate</string>
    <string name="quick_Settings">Quick settings</string>
    <string name="quick_settings_description">Select the number of quick settings in Notification panel and edit their order</string>
    <string name="status_bar_autosync_dialog_enable_title">Turn on Auto-sync?</string>
    <string name="status_bar_autosync_dialog_enable_warning">"Any changes you make to your accounts on the web will be automatically copied to your phone.

Some accounts may also automatically copy any changes you make on the phone to the web.

To choose what kinds of data you sync for each account, go to Settings > Accounts."</string>
    <string name="status_bar_autosync_dialog_extended_enable_warning">"Any changes you make to your accounts on the web will be automatically copied to your device.

Some accounts may also automatically copy any changes you make on the device to the web.

To choose what kinds of data you sync for each account, go to Settings > Accounts.

Data charges may apply when updating your device. An unlimited data plan is recommended."</string>
    <string name="status_bar_autosync_dialog_disable_title">Turn off Auto-sync?</string>
    <string name="status_bar_autosync_dialog_disable_warning">Disabling Auto-sync will conserve data and battery usage, but you will need to sync each account manually to collect recent information. And you will not receive notifications when updates occur.</string>
    <string name="new_sketch">New sketch</string>
    <string name="lte_tool_label">‏LTE</string>
    <string name="new_note">New note</string>
    <string name="brightness_adapt_checkbox_information">Adapt to lighting conditions</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_do_not_disturb_button">Do not disturb</string>
    <string name="status_bar_please_disturb_button">Show notifications</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">No recent apps</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Connect charger</string>
    <string name="battery_low_subtitle">The battery is getting low.</string>
    <string name="battery_low_percent_format">%d%% remaining</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="battery_low_why">Battery use</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is:
%1$s"</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="compat_mode_help_header">Compatibility zoom</string>
    <string name="compat_mode_help_body">When an app was designed for a smaller screen, a zoom control will appear by the clock.</string>
    <string name="screenshot_saving_ticker">Saving screenshot…</string>
    <string name="screenshot_saving_title">Saving screenshot…</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">"Couldn't capture screenshot."</string>
    <string name="screenshot_failed_text">"Couldn't save screenshot. Storage may be in use."</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Recent apps</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_off">Wi-Fi off.</string>
    <string name="accessibility_no_wifi">Wi-Fi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wi-Fi one bar</string>
    <string name="accessibility_wifi_two_bars">Wi-Fi two bars</string>
    <string name="accessibility_wifi_three_bars">Wi-Fi three bars</string>
    <string name="accessibility_wifi_signal_full">Wi-Fi signal full</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_notifications_button">Notifications.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_desc_tab_quick_settings_edit">Edit quick settings</string>
    <string name="status_bar_tab_quick_settings_edit">Edit</string>
</resources>