<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/header" android:background="@drawable/somc_notification_header_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <RelativeLayout android:enabled="false" android:id="@id/datetime" android:background="@drawable/somc_expanded_statusbar_clock_bg" android:paddingTop="0.0dip" android:paddingBottom="0.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <com.android.systemui.statusbar.policy.Clock android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Clock" android:id="@id/clock_expanded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginStart="8.0dip" />
        <com.android.systemui.statusbar.policy.DateView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Date" android:id="@id/date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="8.0dip" android:layout_toEndOf="@id/clock_expanded" />
    </RelativeLayout>
    <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="11.0dip" android:textStyle="bold" android:textColor="#ff00a040" android:layout_gravity="center_vertical" android:id="@id/header_debug_info" android:padding="2.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-condensed" />
    <Button android:id="@id/clear_all_button" android:background="@drawable/somc_quick_settings_btn_default" android:visibility="gone" android:layout_width="106.0dip" android:layout_height="wrap_content" android:text="@string/status_bar_clear_all_button" android:contentDescription="@string/accessibility_clear_all" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
    <Button android:id="@id/tab_edit_quick_settings_button" android:background="@drawable/somc_quick_settings_btn_default" android:visibility="gone" android:layout_width="106.0dip" android:layout_height="wrap_content" android:text="@string/status_bar_tab_quick_settings_edit" android:contentDescription="@string/accessibility_desc_tab_quick_settings_edit" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
    <FrameLayout android:id="@id/settings_button_holder" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginStart="12.0dip">
        <ImageView android:id="@id/settings_button" android:background="@drawable/ic_notify_button_bg" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_notify_settings" android:scaleType="center" android:contentDescription="@string/accessibility_desc_quick_settings" />
        <ImageView android:id="@id/notification_button" android:background="@drawable/ic_notify_button_bg" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_notifications" android:scaleType="center" android:contentDescription="@string/accessibility_notifications_button" />
    </FrameLayout>
</LinearLayout>